force-app/main/default/objects/Product_Information_Detail__c/Product_Information_Detail__c.object-meta.xml
<CustomObject>
    <label>Product: Account Information</label>
    <nameField>
        <displayFormat>PRD-{0000}</displayFormat>
        <label>Product: Account Information No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product: Account Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>