force-app/main/default/objects/Product_Information_Detail__c/fields/ACC_S1B__c.field-meta.xml
<CustomField>
    <fullName>ACC_S1B__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACC_S1B</label>
    <length>1</length>
    <type>Text</type>
</CustomField>