force-app/main/default/objects/Product_Information_Detail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>