force-app/main/default/objects/Product_Information_Detail__c/fields/BDM_Latest_SIXMTH_TXN__c.field-meta.xml
<CustomField>
    <fullName>BDM_Latest_SIXMTH_TXN__c</fullName>
    <formula>IF(LATEST_SIXMTH_TXN__c &gt; 40, &quot;High&quot;, 
IF(LATEST_SIXMTH_TXN__c &gt;= 10 &amp;&amp; LATEST_SIXMTH_TXN__c &lt;= 40, &quot;Medium&quot;,
IF(LATEST_SIXMTH_TXN__c &lt; 10 , &quot;Low&quot;, 
&quot;Low&quot;)
))</formula>
    <label>6 months Avg</label>
    <type>Text</type>
</CustomField>