force-app/main/default/objects/Product_Information_Detail__c/fields/Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account__c</fullName>
    <formula>IF(
				AND(
								NOT(ISBLANK(Customer__r.TMB_Customer_ID_PE__c )), NOT(ISBLANK(UPPER(ACC_S1B__c))), UPPER(Product_Domain__c) = UPPER(&apos;Deposit &amp; investment&apos;)),
				&apos;มี&apos;, &apos;ไม่มี&apos;)</formula>
    <label>Deposit Account</label>
    <type>Text</type>
</CustomField>