force-app/main/default/objects/Product_Information_Detail__c/fields/DPD_Date__c.field-meta.xml
<CustomField>
    <fullName>DPD_Date__c</fullName>
    <label>DPD Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>