force-app/main/default/objects/Product_Information_Detail__c/fields/DPD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DPD_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DPD Due Date</label>
    <type>Date</type>
</CustomField>