force-app/main/default/objects/Product_Information_Detail__c/fields/DPD_Pass_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>DPD_Pass_Due_Amount__c</fullName>
    <label>DPD Pass Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>