force-app/main/default/objects/Product_Information_Detail__c/fields/DPD_Range__c.field-meta.xml
<CustomField>
    <fullName>DPD_Range__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DPD Range</label>
    <length>15</length>
    <type>Text</type>
</CustomField>