force-app/main/default/objects/Product_Information_Detail__c/fields/Ending_out_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ending_out_Ending_Balance__c</fullName>
    <label>Ending O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>