force-app/main/default/objects/Product_Information_Detail__c/fields/Import_Export__c.field-meta.xml
<CustomField>
    <fullName>Import_Export__c</fullName>
    <formula>Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import / Export</label>
    <type>Text</type>
</CustomField>