force-app/main/default/objects/Product_Information_Detail__c/fields/ISO_CURRENCY_CD__c.field-meta.xml
<CustomField>
    <fullName>ISO_CURRENCY_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ISO CURRENCY CD</label>
    <length>15</length>
    <type>Text</type>
</CustomField>