force-app/main/default/objects/Product_Information_Detail__c/fields/IsScrambled__c.field-meta.xml
<CustomField>
    <fullName>IsScrambled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsScrambled</label>
    <type>Checkbox</type>
</CustomField>