force-app/main/default/objects/Product_Information_Detail__c/fields/LATEST_MTH_TXN__c.field-meta.xml
<CustomField>
    <fullName>LATEST_MTH_TXN__c</fullName>
    <label>LATEST_MTH_TXN</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>