force-app/main/default/objects/Product_Information_Detail__c/fields/Limit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Limit_Balance__c</fullName>
    <label>Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>