force-app/main/default/objects/Product_Information_Detail__c/fields/MAX_SIXMTH_TXN__c.field-meta.xml
<CustomField>
    <fullName>MAX_SIXMTH_TXN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MAX_SIXMTH_TXN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>