force-app/main/default/objects/Product_Information_Detail__c/fields/PRD_Detail_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PRD_Detail_External_ID__c</fullName>
    <description>Store External ID of Product Detail : TMB_CUST_ID + TMB_ACCOUNT_ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>PRD Detail External ID</label>
    <length>103</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>