force-app/main/default/objects/Product_Information_Detail__c/fields/Product_code__c.field-meta.xml
<CustomField>
    <fullName>Product_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>