force-app/main/default/objects/Product_Information_Detail__c/fields/Product_Description_link__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;  Product_Information__c ,  Product_Description__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>