force-app/main/default/objects/Product_Information_Detail__c/fields/Product_Domain__c.field-meta.xml
<CustomField>
    <fullName>Product_Domain__c</fullName>
    <formula>Product_Information__r.Product_Domain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Domain</label>
    <type>Text</type>
</CustomField>