force-app/main/default/objects/Product_Information_Detail__c/fields/Product_Hierachy_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierachy_Code__c</fullName>
    <formula>Product_Information__r.Product_Hierachy_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Hierachy Code</label>
    <type>Text</type>
</CustomField>