force-app/main/default/objects/Product_Information_Detail__c/fields/Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Product_Information__c</fullName>
    <label>Product Information</label>
    <referenceTo>Product_Information_On_Hand__c</referenceTo>
    <relationshipLabel>Product: Account Information</relationshipLabel>
    <relationshipName>Product_Information_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>