force-app/main/default/objects/Product_Information_Detail__c/fields/RO_Service__c.field-meta.xml
<CustomField>
    <fullName>RO_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RO Service</label>
    <length>1</length>
    <type>Text</type>
</CustomField>