force-app/main/default/objects/Product_Information_Detail__c/fields/S1B__c.field-meta.xml
<CustomField>
    <fullName>S1B__c</fullName>
    <formula>CASE( UPPER(ACC_S1B__c) , 
&quot;Y&quot;, &quot;มี&quot;, 
&quot;N&quot;, &quot;ไม่มี&quot;, 
&quot;ไม่มี&quot;)</formula>
    <label>S1B</label>
    <type>Text</type>
</CustomField>