force-app/main/default/objects/Product_Information_Detail__c/fields/Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured__c</fullName>
    <formula>Limit_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>