force-app/main/default/objects/Product_Information_Detail__c/fields/THB_Amount__c.field-meta.xml
<CustomField>
    <fullName>THB_Amount__c</fullName>
    <formula>Limit_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>THB Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>