force-app/main/default/objects/Product_Information_Detail__c/recordTypes/Product_Detail_Default.recordType-meta.xml
<RecordType>
    <fullName>Product_Detail_Default</fullName>
    <active>true</active>
    <description>Product Information detail - default record type</description>
    <label>Product Detail - Default</label>
</RecordType>