force-app/main/default/objects/Product_Information_Detail__c/recordTypes/Product_Detail_Foreign.recordType-meta.xml
<RecordType>
    <fullName>Product_Detail_Foreign</fullName>
    <active>true</active>
    <description>Product Information - Foreign currency, Interest rate</description>
    <label>Product Detail - Foreign</label>
</RecordType>