force-app/main/default/objects/Product_Information_Detail__c/recordTypes/Product_Detail_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Product_Detail_Insurance</fullName>
    <active>true</active>
    <description>Product Information - Life Insurance, Non-Life Insurance</description>
    <label>Product Detail - Insurance</label>
</RecordType>